compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__bit_string_invalid_type.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 110
expression: "fn x() { \"test\" }\n\nfn main() {\n    let a = <<1:size(x())>>\n    a\n}"

---
error: Type mismatch
  ┌─ /src/one/two.gleam:4:22
  │
4 │     let a = <<1:size(x())>>
  │                      ^^^

Expected type:

    Int

Found type:

    String


